--- a/index.html
+++ b/index.html
@@ -5,13 +5,37 @@
     <meta name="viewport" content="width=git, initial-scale=1.0">
     <title>Comming soon</title>
 <link rel="icon" type="image/png" href="./favicon/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+<link rel="shortcut icon" href="./favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="Coming soon" />
+<link rel="manifest" href="./favicon/apple-touch-icon.png" />
+<link rel="stylesheet" href="./css/pages/coming-soon.css"/>
 </head>
+
 <body>
-    <header></header>
-    <main></main>
+    <header class="conteiner">
+        <div>
+            <img scr="./img/logo.png" alt="Logo">
+            <h1>Coming soon</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos consequatur soluta beatae officiis reprehenderit facere unde facilis accusantium ducimus! 
+            Alias voluptatum quis sunt. Quasi error similique id earum facere.</p> 
+        </div>
+    </header>
+
+
+    <main>
+        <div>
+            <img src="#" alt="Logo">
+            <div>
+                <p>Copyright &copy;</p>
+                <p>In the meantime, feel free to reach out to us at <a href="mailto:">
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div>
+            <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+        </div>
 </body>
 </html>
