--- a/index.html
+++ b/index.html
@@ -14,28 +14,38 @@
 </head>
 
 <body>
-    <header class="conteiner">
-        <div>
-            <img scr="./img/logo.png" alt="Logo">
+    <header class="container bg-blue">
+        <div class="row-short">
+            <img class="logo" src="./img/logo.png" alt="Logo">
             <h1>Coming soon</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos consequatur soluta beatae officiis reprehenderit facere unde facilis accusantium ducimus! 
-            Alias voluptatum quis sunt. Quasi error similique id earum facere.</p> 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos consequatur soluta beatae officiis reprehenderit facere unde facilis accusantium ducimus! Alias voluptatum quis sunt. Quasi error similique id earum facere.</p> 
         </div>
     </header>
 
 
-    <main>
-        <div>
-            <img src="#" alt="Logo">
-            <div>
-                <p>Copyright &copy;</p>
-                <p>In the meantime, feel free to reach out to us at <a href="mailto:">
+    <main class="container">
+        <div class="row">
+            <div class="column">
+                <h2>About startup</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis asperiores distinctio quas est iure voluptates ratione. Pariatur alias quibusdam dolores, <a href="#">Matrox</a> culpa obcaecati repellendus vel illum commodi, voluptatem incidunt harum!</p>
+            </div>
+            <div class="column">
+                <h2>Have any question?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing <a href="mailto:mano@pastas.lt">mano@pastas.lt</a> elit. Quisquam, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit?</p>
             </div>
         </div>
     </main>
-    <footer>
-        <div>
-            <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+
+    <footer class="container bg-blue">
+        <div class="row-short">
+            <img class="logo-white" src="./img/logo-white.png" alt="Logo">
+            <div class="=text trio">
+                <p>Copuright &copy; 2025 <a href="#">Matrox</a></p>
+                <p>All rights reserved</p>
+                <p>Designed by <a href="#">TrendyTheme</a></p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam in soluta fuga officiis fugit architecto. Magnam recusandae, hic aperiam, repellendus aspernatur sapiente quia optio alias modi nisi incidunt ipsam facere?</p>
         </div>
+    </footer>
 </body>
 </html>
