--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <div class="row-short">
             <img class="logo-white" src="./img/logo-white.png" alt="Logo">
             <div class="=text trio">
-                <p>Copuright &copy; 2025 <a href="#">Matrox</a></p>
+                <p>Copyright &copy; 2025 <a href="#">Matrox</a></p>
                 <p>All rights reserved</p>
                 <p>Designed by <a href="#">TrendyTheme</a></p>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam in soluta fuga officiis fugit architecto. Magnam recusandae, hic aperiam, repellendus aspernatur sapiente quia optio alias modi nisi incidunt ipsam facere?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam in soluta fuga officiis fugit architecto. Magnam recusandae, hic aperiam, repellendus aspernatur sapiente quia optio alias modi!</p>
         </div>
     </footer>
 </body>
