--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <meta name="apple-mobile-web-app-title" content="Coming soon" />
 <link rel="manifest" href="./favicon/apple-touch-icon.png" />
 <link rel="stylesheet" href="./css/pages/coming-soon.css"/>
+<link rel="stylesheet" href="./css/components/layout.css"/>
 </head>
 
 <body>
     <header class="container bg-blue">
         <div class="row-short">
             <img class="logo" src="./img/logo.png" alt="Logo">
-            <h1>Coming soon</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos consequatur soluta beatae officiis reprehenderit facere unde facilis accusantium ducimus! Alias voluptatum quis sunt. Quasi error similique id earum facere.</p> 
+            <h1 class="main-title">Coming soon</h1>
+            <p class="main-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos consequatur soluta beatae officiis reprehenderit facere unde facilis accusantium ducimus! Alias voluptatum quis sunt. Quasi error similique id earum facere.</p> 
         </div>
     </header>
 
@@ -26,8 +27,8 @@
     <main class="container">
         <div class="row">
             <div class="column">
-                <h2>About startup</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis asperiores distinctio quas est iure voluptates ratione. Pariatur alias quibusdam dolores, <a href="#">Matrox</a> culpa obcaecati repellendus vel illum commodi, voluptatem incidunt harum!</p>
+                <h2 class="section-title">About startup</h2>
+                <p class="section-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis asperiores distinctio quas est iure voluptates ratione. Pariatur alias quibusdam dolores, <a href="#">Matrox</a> culpa obcaecati repellendus vel illum commodi, voluptatem incidunt harum!</p>
             </div>
             <div class="column">
                 <h2>Have any question?</h2>
@@ -39,7 +40,7 @@
     <footer class="container bg-blue">
         <div class="row-short">
             <img class="logo-white" src="./img/logo-white.png" alt="Logo">
-            <div class="=text trio">
+            <div class="text-trio">
                 <p>Copyright &copy; 2025 <a href="#">Matrox</a></p>
                 <p>All rights reserved</p>
                 <p>Designed by <a href="#">TrendyTheme</a></p>
