--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <link rel="manifest" href="./favicon/apple-touch-icon.png" />
 <link rel="stylesheet" href="./css/pages/coming-soon.css"/>
 <link rel="stylesheet" href="./css/components/layout.css"/>
+<link rel="stylesheet" href="./css/components/clock.css"/>
+<link rel="stylesheet" href="./css/components/mouse.css"/>
 </head>
 
 <body>
@@ -19,11 +21,29 @@
         <div class="row-short">
             <img class="logo" src="./img/logo.png" alt="Logo">
             <h1 class="main-title">Coming soon</h1>
-            <p class="main-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos consequatur soluta beatae officiis reprehenderit facere unde facilis accusantium ducimus! Alias voluptatum quis sunt. Quasi error similique id earum facere.</p> 
-        </div>
+            <p class="main-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos consequatur soluta beatae officiis reprehenderit facere unde facilis accusantium ducimus! Alias voluptatum quis sunt. Quasi error similique id earum facere!</p>
+            <div class="clock">
+                <div class="time">
+                    <div class="value">432</div>
+                    <div class="label">Days</div>
+                </div>
+                <div class="time">
+                    <div class="value">09</div>
+                    <div class="label">Hours</div>
+                </div>
+                <div class="time">
+                    <div class="value">37</div>
+                    <div class="label">Minutes</div>
+                </div>
+                <div class="time">
+                    <div class="value">39</div>
+                    <div class="label">Seconds</div>
+                </div>
+            </div>
+            <div class="mouse"></div>
+            </div>
     </header>
-
-
+    
     <main class="container">
         <div class="row">
             <div class="column">
@@ -31,8 +51,8 @@
                 <p class="section-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis asperiores distinctio quas est iure voluptates ratione. Pariatur alias quibusdam dolores, <a href="#">Matrox</a> culpa obcaecati repellendus vel illum commodi, voluptatem incidunt harum!</p>
             </div>
             <div class="column">
-                <h2>Have any question?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing <a href="mailto:mano@pastas.lt">mano@pastas.lt</a> elit. Quisquam, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit?</p>
+                <h2 class="section-title">Have any question?</h2>
+                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing <a href="mailto:mano@pastas.lt">mano@pastas.lt</a> elit. Quisquam, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit?</p>
             </div>
         </div>
     </main>
