--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 <meta name="apple-mobile-web-app-title" content="Coming soon" />
 <link rel="manifest" href="./favicon/apple-touch-icon.png" />
 <!-- base/layout-->
-<link rel="stylesheet" href="./css/pages/coming-soon.css"/>
+<link rel="stylesheet" href="./css/base/bace.css"/>
 <link rel="stylesheet" href="./css/base/layout.css"/>
 <!-- vendor-->
+<link rel="stylesheet" href="./css/vendor/font-awesome.min.css"/>
 <!--components-->
 <link rel="stylesheet" href="./css/components/clock.css"/>
 <link rel="stylesheet" href="./css/components/mouse.css"/>
 <link rel="stylesheet" href="./css/components/progress-bar.css">
 <!--custom pege-->
+<link rel="stylesheet" href="./css/pages/coming-soon.css"/>
 </head>
 
 <body>
@@ -81,23 +83,24 @@
                         <div class="bar" style="width: 12%;"></div>
                     </div>
                 </div>
-            </div>    
-
+            </div>
             <div class="column">
                 <h2 class="section-title">Have any question?</h2>
                 <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing <a href="mailto:mano@pastas.lt">mano@pastas.lt</a>. Lorem ipsum dolor sit amet consectetur adipisicing elit?</p>
-        
+            </div>
+        </div>
     </main>
 
     <footer class="container bg-blue">
         <div class="row">
              <div class="socials">
-                <a href="#" class="fa fa-feisbook"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#">AA</a>
-                <a href="#">AA</a>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-dribbble"></a>
+                <a href="#" class="fa fa-tumblr"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-rss"></a>
             </div>
         </div>   
         <div class="row-short">
