--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="./css/components/clock.css"/>
 <link rel="stylesheet" href="./css/components/mouse.css"/>
 <link rel="stylesheet" href="./css/components/progress-bar.css">
+<link rel="stylesheet" href="./css/components/forms.css">
 <!--custom pege-->
 <link rel="stylesheet" href="./css/pages/coming-soon.css"/>
 </head>
@@ -47,6 +48,17 @@
                     <div class="label">Seconds</div>
                 </div>
             </div>
+             <form class="form">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name="email" value="" maxlength="50" placeholder="Your email" required>
+                    </div>
+                </div>
+                 <div class="form-row">
+                    <button type="submit">Subscribe</button>
+                </div>
+            </form>
             <div class="mouse"></div>
             </div>
     </header>
@@ -87,6 +99,27 @@
             <div class="column">
                 <h2 class="section-title">Have any question?</h2>
                 <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing <a href="mailto:mano@pastas.lt">mano@pastas.lt</a>. Lorem ipsum dolor sit amet consectetur adipisicing elit?</p>
+                 <form class="form">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="first-name">Name</label>
+                            <input id="first-name" type="text" name="name" value="Vardenis" placeholder="Your name" maxlength="25" required autofocus>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input id="email" type="email" name="email" value="" maxlength="50" placeholder="Your email" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" minlength="20" maxlength="1000" placeholder="Your message" required></textarea>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <button type="submit">Send message</button>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
