--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                         <div>90%</div>
                     </div>
                     <div class="bottom">
-                        <div class="bar"></div>
+                        <div class="bar" style="width: 90%;">
+                            <div class="value"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="progress-bar">
@@ -84,6 +86,7 @@
                     </div>
                     <div class="bottom">
                         <div class="bar" style="width: 57%;"></div>
+                           <div class="value"></div>
                     </div>
                 </div>
                  <div class="progress-bar">
@@ -93,6 +96,7 @@
                     </div>
                     <div class="bottom">
                         <div class="bar" style="width: 12%;"></div>
+                           <div class="value"></div>
                     </div>
                 </div>
             </div>
