--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                         <div>57%</div>
                     </div>
                     <div class="bottom">
-                        <div class="bar" style="width: 57%;"></div>
+                        <div class="bar" style="width: 57%;">
                            <div class="value"></div>
+                        </div>
                     </div>
                 </div>
                  <div class="progress-bar">
@@ -95,8 +96,9 @@
                         <div>12%</div>
                     </div>
                     <div class="bottom">
-                        <div class="bar" style="width: 12%;"></div>
+                        <div class="bar" style="width: 12%;">
                            <div class="value"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -107,7 +109,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="first-name">Name</label>
-                            <input id="first-name" type="text" name="name" value="Vardenis" placeholder="Your name" maxlength="25" required autofocus>
+                            <input id="first-name" type="text" name="name" value="Vardenis" placeholder="Your name" maxlength="25" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
@@ -139,6 +141,7 @@
                 <a href="#" class="fa fa-instagram"></a>
                 <a href="#" class="fa fa-rss"></a>
             </div>
+            <a href="#" class="back-to-top fa fa-angle-up"></a>
         </div>   
         <div class="row-short">
             <img class="logo-white" src="./img/logo-white.png" alt="Logo">
