--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="column">
                 <h2 class="section-title">Have any question?</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing <a href="mailto:mano@pastas.lt">mano@pastas.lt</a>. Lorem ipsum dolor sit amet consectetur adipisicing elit?</p>
+                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit <a href="mailto:mano@pastas.lt">mano@pastas.lt</a>. Lorem ipsum dolor sit amet consectetur adipisicing elit?</p>
                  <form class="form">
                     <div class="form-row">
                         <div class="form-group">
@@ -150,7 +150,7 @@
                 <p>All rights reserved</p>
                 <p>Designed by <a href="#">TrendyTheme</a></p>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam in soluta fuga officiis fugit architecto. Magnam recusandae, hic aperiam, repellendus aspernatur sapiente quia optio alias modi!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam in soluta fuga officiis fugit architecto. Magnam recusandae, <a href="#">200+</a> hic aperiam, repellendus aspernatur sapiente <a href="#">Matrox</a> quia optio alias modi!</p>
         </div>
     </footer>
 </body>
